[package]
name = "sp1-reth-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
rlp = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
alloy-primitives = { version = "0.6.0", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
# reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }
# revm = "5.0.0"
revm = { git = "https://github.com/sp1-patches/revm", branch = "john/v5.0.0-patched", features = ["std"], default-features = false }
anyhow = "1.0.79"
hashbrown = "0.14.3"
# ethers-core = "2.0.13"
# ethers-providers = "2.0.13"
# tokio = { version = "1.36.0", features = ["full"] }
# alloy-providers = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
# alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
url = "2.5.0"
hex = "0.4.3"

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"
