[package]
name = "sp1-reth-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
alloy-primitives = { version = "0.7", default-features = false, features = [
    "rlp",
    "serde",
    "std",
    "tiny-keccak",
] }
rlp = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

reth-primitives = { git = "https://github.com/sp1-patches/reth-new", branch = "ratan/feature-gate-secp256k1", default-features = false }
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35", features = [
    "serde",
], default-features = false }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35", default-features = false }

anyhow = "1.0.79"
# hashbrown = "0.14.3"
url = "2.5.0"
hex = "0.4.3"

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"

[patch.crates-io]
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35" }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35" }
