[workspace]
[package]
version = "0.1.0"
name = "sp1-revm-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "ratan/downgrade-strum" }
sp1-reth-primitives = { path = "../primitives" }
revm = { git = "https://github.com/sp1-patches/revm", branch = "patch-v5.0.0", features = [
    "std",
], default-features = false }
# reth-primitives = { path = "../../reth/crates/primitives", default-features = false}
reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }
alloy-rlp = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
alloy-primitives = { version = "0.6.0", default-features = false, features = [
    "rlp",
    "serde",
    "std",
    "tiny-keccak",
] }
anyhow = "1.0.75"
hashbrown = "0.14.3"
hex = "0.4.3"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "v0.10.8" }
