[workspace]
[package]
version = "0.1.0"
name = "sp1-reth"
edition = "2021"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
vergen = { version = "8", default-features = false, features = [
    "build",
    "git",
    "git2",
] }

[dependencies]
clap = { version = "4.4.15", features = ["derive", "env"] }
bincode = "1.3.3"
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-reth-primitives = { path = "../primitives" }
sp1-reth-utils = { path = "../utils" }

tokio = { version = "1.36.0", features = ["full"] }


[features]
neon = ["sp1-prover/neon"]

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "v0.10.8" }
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35" }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35" }
