[package]
name = "sp1-reth-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.15", features = ["derive", "env"] }
bincode = "1.3.3"
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-reth-primitives = { path = "../primitives" }

alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
rlp = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
alloy-primitives = { version = "0.7", default-features = false, features = [
    "rlp",
    "serde",
    "std",
    "tiny-keccak",
] }
reth-primitives = { git = "https://github.com/sp1-patches/reth-new", branch = "ratan/feature-gate-secp256k1", default-features = false }
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35", features = [
    "std",
], default-features = false }
anyhow = "1.0.79"
hashbrown = "0.14.3"
ethers-core = "2.0.13"
ethers-providers = "2.0.13"
tokio = { version = "1.36.0", features = ["full"] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
url = "2.5.0"
async-trait = "0.1.77"
reqwest = "0.12.4"

[patch.crates-io]
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35" }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "ratan/secp256k1-on-v35" }
